--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -11,16 +11,13 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :user_name %><br>
-    <%= f.text_field :user_name %>
-  </div>
+   
   <div class="field">
     <%= f.label :body %><br>
     <%= f.text_area :body %>
   </div>
     <%= f.hidden_field :idea_id %>
-
+    <%= f.hidden_field :user_name,value:current_user.name%>
   <div class="actions">
     <%= f.submit %>
   </div>
